# xfce4-icon-theme

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  configure.in.in  libtool  project.config  xfce4-icon-theme.spec  xfce4-icon-theme.spec.in
Rodent/: Makefile.am  Makefile.in  README  iconrc  iconrc-png  iconrc-png.in  index.theme  index.theme.in
Rodent-2/: Makefile.inc  index.theme.in
Rodent-2/48x48/: Makefile.am
Rodent-2/48x48/actions/: Makefile.am
Rodent-2/48x48/apps/: Makefile.am
Rodent-2/48x48/categories/: Makefile.am
Rodent-2/48x48/devices/: Makefile.am
Rodent-2/48x48/mimetypes/: Makefile.am
Rodent-2/48x48/places/: Makefile.am
Rodent-2/48x48/status/: Makefile.am
Rodent/48x48/: Makefile.am  Makefile.in
Rodent/48x48/actions/: Makefile.am
Rodent/48x48/apps/: Makefile.am  Makefile.in
Rodent/48x48/categories/: Makefile.am
Rodent/48x48/devices/: Makefile.am  Makefile.in
Rodent/48x48/emblems/: Makefile.am  Makefile.in
Rodent/48x48/filesystems/: Makefile.am  Makefile.in
Rodent/48x48/mimetypes/: Makefile.am  Makefile.in
Rodent/48x48/misc/: Makefile.am  Makefile.in
Rodent/48x48/status/: Makefile.am
Rodent/48x48/stock/: Makefile.am  Makefile.in  comp1.xpm  new_win.xpm  p-edit.xpm  p-file1.xpm  p-file2.xpm  p-games.xpm  p-multimedia.xpm  p-network.xpm  p-newmail.xpm  p-nomail.xpm  p-oldmail.xpm  p-paint.xpm  p-print.xpm  p-schedule.xpm  p-sound.xpm  p-terminal.xpm  p-unknown.xpm
Rodent/scalable/: Makefile.in
Rodent/scalable/actions/: iconrc
Rodent/scalable/apps/: Makefile.am  Makefile.in
Rodent/scalable/devices/: Makefile.am  Makefile.in
Rodent/scalable/emblems/: Makefile.am  Makefile.in
Rodent/scalable/filesystems/: Makefile.am  Makefile.in
Rodent/scalable/mimetypes/: Makefile.am  Makefile.in
Rodent/scalable/misc/: Makefile.am  Makefile.in
Rodent/scalable/stock/: Makefile.am  Makefile.in
mime/: Makefile.am  Makefile.in  Rodent-svg.mime.xml  Rodent.mime.xml  gnome.mime.xml
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  mk.po  nb_NO.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  si.po  sk.po  sq.po  (+8 more)
xfce_4_4/: ChangeLog  configure.in.in
xfce_4_4/Rodent/: iconrc-png.in  iconrc.in  index.theme.in
xfce_4_4/Rodent/48x48/devices/: Makefile.am
xfce_4_4/Rodent/48x48/filesystems/: Makefile.am
xfce_4_4/Rodent/48x48/mimetypes/: Makefile.am
xfce_4_4/Rodent/scalable/: Makefile.am
xfce_4_4/Rodent/scalable/emblems/: Makefile.am
xfce_4_4/Rodent/scalable/stock/: Makefile.am
xfce_4_4/mime/: Makefile.am
xfce_4_4/po/: ChangeLog  LINGUAS
