AC_INIT([xfce4-icon-theme], [4.2.4])
AM_INIT_AUTOMAKE([1.9 tar-ustar])

AM_MAINTAINER_MODE

AC_PROG_INSTALL
AC_PROG_LN_S


AC_OUTPUT([
xfce4-icon-theme.spec
Makefile
mime/Makefile
Rodent/Makefile
Rodent/48x48/Makefile
Rodent/48x48/apps/Makefile
Rodent/48x48/devices/Makefile
Rodent/48x48/filesystems/Makefile
Rodent/48x48/emblems/Makefile
Rodent/48x48/mimetypes/Makefile
Rodent/48x48/misc/Makefile
Rodent/48x48/stock/Makefile
Rodent/scalable/Makefile
Rodent/scalable/apps/Makefile
Rodent/scalable/devices/Makefile
Rodent/scalable/filesystems/Makefile
Rodent/scalable/emblems/Makefile
Rodent/scalable/mimetypes/Makefile
Rodent/scalable/misc/Makefile
Rodent/scalable/stock/Makefile
])

