
icondir = $(datadir)/icons/Rodent-2/48x48/actions

kde_compatible_icons = \
up.png \
down.png \
open.png

gtk_compatible_icons = \
gtk-about.png \
gtk-add.png \
gtk-apply.png \
gtk-cancel.png \
gtk-close.png \
gtk-copy.png \
gtk-cut.png \
gtk-fullscreen.png \
gtk-help.png \
gtk-go-down.png \
gtk-go-up.png \
gtk-go-back-ltr.png \
gtk-go-back-rtl.png \
gtk-go-forward-ltr.png \
gtk-go-forward-rtl.png \
gtk-ok.png \
gtk-open.png \
gtk-paste.png \
gtk-redo.png \
gtk-refresh.png \
gtk-remove.png \
gtk-undo.png \
gtk-zoom-fit.png \
gtk-zoom-in.png \
gtk-zoom-100.png \
gtk-zoom-out.png

icon_naming_spec_compatible_icons = \
edit-cut.png \
edit-paste.png \
edit-redo.png \
edit-undo.png \
go-up.png \
go-down.png \
go-previous.png \
go-next.png \
list-add.png \
list-remove.png \
dialog-cancel.png \
dialog-close.png \
dialog-ok.png \
document-open.png \
help-about.png \
help-contents.png \
view-refresh.png \
system-log-out.png \
view-fullscreen.png \
zoom-best-fit.png \
zoom-in.png \
zoom-original.png \
zoom-out.png

additional_icons = \
system-shutdown.png

icon_DATA = \
	$(icon_naming_spec_compatible_icons) \
	$(gtk_compatible_icons) \
	$(kde_compatible_icons)
	\
	$(additional_icons)

EXTRA_DIST =  $(icon_DATA)
