icondir = $(datadir)/icons/Rodent-2/48x48/apps

# Icon-naming-spec compliant #
# ########################## #
generic_application_icons = \
accessories-calculator.png \
accessories-text-editor.png \
multimedia-volume-control.png \
system-file-manager.png \
utilities-terminal.png

additional_application_icons = 

icon_DATA = \
	$(generic_application_icons) \
	$(additional_application_icons)

EXTRA_DIST =  $(icon_DATA)
