icondir = $(datadir)/icons/Rodent-2/48x48/apps

# Icon-naming-spec compliant #
# ########################## #
generic_application_icons = \
accessories-calculator.png \
accessories-text-editor.png \
help-browser.png \
multimedia-volume-control.png \
preferences-desktop-multimedia.png \
preferences-desktop-keyboard.png \
preferences-desktop-theme.png \
system-file-manager.png \
utilities-terminal.png

additional_application_icons = \
web-browser.png \
file-manager.png

icon_DATA = \
	$(generic_application_icons) \
	$(additional_application_icons)

EXTRA_DIST =  $(icon_DATA)
