icondir = $(datadir)/icons/Rodent-2/48x48/categories

kde_compatible_icons =
gtk_compatible_icons =

icon_naming_spec_compatible_icons = \
preferences-system.png \
preferences-desktop.png \
applications-multimedia.png \
applications-internet.png \
applications-graphics.png \
applications-games.png \
system-help.png


include $(top_srcdir)/Rodent-2/Makefile.inc
