
icondir = $(datadir)/icons/Rodent-2/48x48/devices

kde_compatible_icons =

gtk_compatible_icons = \
gnome-dev-harddisk.png \
gnome-dev-cdrom.png

icon_naming_spec_compatible_icons = \
drive-harddisk.png \
drive-optical.png

icon_DATA = \
	$(icon_naming_spec_compatible_icons) \
	$(gtk_compatible_icons) \
	$(kde_compatible_icons)

EXTRA_DIST =  $(icon_DATA)
