
icondir = $(datadir)/icons/Rodent-2/48x48/mimetypes

generic_mimetype_icons = \
application-x-executable.png \
audio-x-generic.png \
image-x-generic.png \
package-x-generic.png \
text-x-generic.png \
text-x-script.png \
video-x-generic.png

icon_DATA = \
	$(generic_mimetype_icons)

EXTRA_DIST =  $(icon_DATA)

