icondir = $(datadir)/icons/Rodent-2/48x48/places

kde_compatible_icons =

gtk_compatible_icons = \
gnome-fs-directory.png \
gnome-fs-desktop.png \
gnome-fs-home.png

icon_naming_spec_compatible_icons = \
folder.png \
user-home.png \
user-desktop.png

icon_DATA = \
	$(icon_naming_spec_compatible_icons) \
	$(gtk_compatible_icons) \
	$(kde_compatible_icons)

EXTRA_DIST =  $(icon_DATA)
