icondir = $(datadir)/icons/Rodent-2/48x48/places

kde_compatible_icons =

gtk_compatible_icons = \
gnome-fs-directory.png \
gnome-fs-desktop.png \
gnome-fs-home.png \
gnome-fs-trash-empty.png

icon_naming_spec_compatible_icons = \
folder.png \
user-home.png \
user-desktop.png \
user-trash.png

include $(top_srcdir)/Rodent-2/Makefile.inc
