icondir = $(datadir)/icons/Rodent-2/48x48/status

kde_compatible_icons =

gtk_compatible_icons = \
gtk-dialog-error.png \
gtk-dialog-info.png \
gtk-dialog-question.png \
gtk-dialog-warning.png \
gnome-fs-trash-full.png

icon_naming_spec_compatible_icons = \
audio-volume-high.png \
audio-volume-low.png \
audio-volume-medium.png \
audio-volume-muted.png \
dialog-error.png \
dialog-information.png \
dialog-password.png \
dialog-question.png \
dialog-warning.png \
user-trash-full.png

include $(top_srcdir)/Rodent-2/Makefile.inc
