
icondir = $(datadir)/icons/Rodent/48x48/apps

icon_DATA = \
applets-screenshooter.png    gnome-pdf.png         xfce-games.png\
bluefish-icon.png            gnome-searchtool.png  xfce-gnome-mailcheck.png\
digikamcameraclient.png      gnome-settings.png    xfce-graphics.png\
digikam.png                  gnome-shutdown.png    xfce-gtk-paste.png\
evolution.png                gnome-starthere.png   xfce-internet.png\
file-manager.png             gnome-system.png      xfce-mail.png\
file-roller.png              gnome-terminal.png    xfce-man.png\
gftp.png                     gnome-util.png        xfce-multimedia.png\
gimp.png                     gqview.png            xfce-newmail.png\
gnome-applications.png       im-aim.png            xfce-nomail.png\
gnome-audio.png              keyboard.png          xfce-oldmail.png\
gnome-calculator.png         ooo_calc.png          xfce-printer.png\
gnome-cdplayer-icon.png      ooo_chart.png         xfce-schedule.png\
gnome-desktop-config.png     ooo_draw.png          xfce-sound.png\
gnome-devel.png              ooo_impress.png       xfce-system-exit.png\
gnome-globe.png              ooo_math.png          xfce-system-info.png\
gnome-graphics.png           ooo_setup.png         xfce-system-lock.png\
gnome-help.png               ooo_writer.png        xfce-system-settings.png\
gnome-joystick.png           palm-pilot.png        xfce-terminal.png\
gnome-lockscreen.png         settings.png          xfce-trash_empty.png\
gnome-logout.png             web-browser.png       xfce-trash_full.png\
gnome-media-player-icon.png  xcdroast.png          xfce-unknown.png\
gnome-multimedia.png         xfce-edit.png         xfce-utils.png\
gnome-other.png              xfce-filemanager.png  xsane.png

EXTRA_DIST =  $(icon_DATA)

