
icondir = $(datadir)/icons/Rodent/48x48/apps

icon_DATA = \
applets-screenshooter.png    gnome-pdf.png         xfce-gnome-mailcheck.png\
bluefish-icon.png            gnome-searchtool.png  xfce-graphics.png\
digikamcameraclient.png      gnome-settings.png    xfce-gtk-paste.png\
digikam.png                  gnome-shutdown.png    xfce-internet.png\
evolution.png                gnome-starthere.png   xfce-mail.png\
file-manager.png             gnome-system.png      xfce-man.png\
file-roller.png              gnome-terminal.png    xfce-multimedia.png\
gftp.png                     gnome-util.png        xfce-newmail.png\
gimp.png                     gqview.png            xfce-nomail.png\
gnome-applications.png       im-aim.png            xfce-oldmail.png\
gnome-audio.png              keyboard.png          xfce-printer.png\
gnome-calculator.png         ooo_calc.png          xfce-schedule.png\
gnome-cdplayer-icon.png      ooo_chart.png         xfce-sound.png\
gnome-desktop-config.png     ooo_draw.png          xfce-system-exit.png\
gnome-devel.png              ooo_impress.png       xfce-system-info.png\
gnome-globe.png              ooo_math.png          xfce-system-lock.png\
gnome-graphics.png           ooo_setup.png         xfce-system-settings.png\
gnome-help.png               ooo_writer.png        xfce-terminal.png\
gnome-info.png               palm-pilot.png        xfce-trash_empty.png\
gnome-joystick.png           settings.png          xfce-trash_full.png\
gnome-lockscreen.png         web-browser.png       xfce-unknown.png\
gnome-logout.png             xcdroast.png          xfce-utils.png\
gnome-media-player-icon.png  xfce-edit.png         xsane.png\
gnome-multimedia.png         xfce-filemanager.png\
gnome-other.png              xfce-games.png

EXTRA_DIST =  $(icon_DATA)

