
icondir = $(datadir)/icons/Rodent/48x48/apps

icon_DATA = \
applets-screenshooter.png    gnome-searchtool.png  xfce-games.png\
bluefish-icon.png            gnome-settings.png    xfce-gnome-mailcheck.png\
digikamcameraclient.png      gnome-shutdown.png    xfce-graphics.png\
digikam.png                  gnome-starthere.png   xfce-gtk-paste.png\
evolution.png                gnome-system.png      xfce-internet.png\
file-manager.png             gnome-terminal.png    xfce-mail.png\
file-roller.png              gnome-util.png        xfce-man.png\
gftp.png                     gqview.png            xfce-multimedia.png\
gimp.png                     im-aim.png            xfce-newmail.png\
gnome-package.png	     gnome-library.png\
gnome-applications.png       keyboard.png          xfce-nomail.png\
gnome-audio.png              ooo_calc.png          xfce-oldmail.png\
gnome-calculator.png         ooo_chart.png         xfce-printer.png\
gnome-cdplayer-icon.png      ooo_draw.png          xfce-schedule.png\
gnome-desktop-config.png     ooo_impress.png       xfce-sound.png\
gnome-devel.png              ooo_math.png          xfce-system-exit.png\
gnome-globe.png              ooo_setup.png         xfce-system-info.png\
gnome-graphics.png           ooo_writer.png        xfce-system-lock.png\
gnome-help.png               palm-pilot.png        xfce-system-settings.png\
gnome-info.png               settings.png          xfce-terminal.png\
gnome-joystick.png           web-browser.png       xfce-trash_empty.png\
gnome-lockscreen.png         xcdroast.png          xfce-trash_full.png\
gnome-logout.png             xfce4-mixer.png       xfce-unknown.png\
gnome-media-player-icon.png  xfce4-panel.png       xfce-utils.png\
gnome-multimedia.png         xfce4-splash.png      xsane.png\
gnome-other.png              xfce-edit.png\
gnome-pdf.png                xfce-filemanager.png

EXTRA_DIST =  $(icon_DATA)

