
icondir = $(datadir)/icons/Rodent/48x48/devices

icon_DATA = \
gnome-dev-cdrom-audio.png  gnome-dev-keyboard.png       gnome-dev-scanner.png\
gnome-dev-cdrom.png        gnome-dev-mouse-ball.png     gnome-dev-symlink.png\
gnome-dev-dvd.png          gnome-dev-mouse-optical.png  gnome-dev-zipdisk.png\
gnome-dev-floppy.png       gnome-dev-network.png        network_fs.png\
gnome-dev-harddisk.png     gnome-dev-printer.png\
gnome-dev-jazdisk.png      gnome-dev-removable.png

EXTRA_DIST =  $(icon_DATA)

