
icondir = $(datadir)/icons/Rodent/48x48/devices

icon_DATA = \
gnome-dev-cdrom-audio.png  input-keyboard.png       gnome-dev-scanner.png\
gnome-dev-cdrom.png        input-mouse.png     gnome-dev-symlink.png\
gnome-dev-dvd.png          gnome-dev-zipdisk.png\
gnome-dev-floppy.png       gnome-dev-network.png        network_fs.png\
drive-harddisk.png     printer.png\
gnome-dev-jazdisk.png      gnome-dev-removable.png	printer-class.png

EXTRA_DIST =  $(icon_DATA)

