
icondir = $(datadir)/icons/Rodent/48x48/emblems

icon_DATA = \
emblem-camera.png         emblem-generic.png     emblem-pictures.png\
emblem-cool.png           emblem-important.png   emblem-relax.png\
emblem-danger.png         emblem-multimedia.png  emblem-sound.png\
emblem-desktop.png        emblem-noread.png      emblem-symbolic-link.png\
emblem-distinguished.png  emblem-nowrite.png     emblem-urgent.png\
emblem-documents.png      emblem-ohno.png        emblem-web.png\
emblem-fun.png            emblem-package.png     

EXTRA_DIST =  $(icon_DATA)

