
icondir = $(datadir)/icons/Rodent/48x48/filesystems

icon_DATA = \
gnome-fs-blockdev.png            gnome-fs-network.png\
gnome-fs-client.png              gnome-fs-nfs.png\
gnome-fs-desktop.png             gnome-fs-regular.png\
gnome-fs-directory-accept.png    gnome-fs-share.png\
gnome-fs-directory.png           gnome-fs-smb.png\
gnome-fs-directory-visiting.png  gnome-fs-ssh.png\
gnome-fs-executable.png          gnome-fs-trash-empty.png\
gnome-fs-file-broken.png         gnome-fs-trash-full.png\
gnome-fs-ftp.png                 network_fs.png\
gnome-fs-home.png                open_folder.png

EXTRA_DIST =  $(icon_DATA)

