
icondir = $(datadir)/icons/Rodent/48x48/mimetypes

icon_DATA = \
gnome-library.png                                    gnome-mime-application-x-kpresenter.png        gnome-mime-image-x-rgb.png\
gnome-mime-application-msword.png                    gnome-mime-application-x-kspread.png           gnome-mime-image-x-tga.png\
gnome-mime-application-octet-stream.png              gnome-mime-application-x-kword.png             gnome-mime-image-x-xbitmap.png\
gnome-mime-application-ogg.png                       gnome-mime-application-x-lha.png               gnome-mime-image-x-xcf.png\
gnome-mime-application-pdf.png                       gnome-mime-application-x-object.png            gnome-mime-image-x-xfig.png\
gnome-mime-application-pgp-encrypted.png             gnome-mime-application-x-perl.png              gnome-mime-image-x-xpixmap.png\
gnome-mime-application-pgp-keys.png                  gnome-mime-application-x-php.png               gnome-mime-image-x-xwindowdum.png\
gnome-mime-application-pgp.png                       gnome-mime-application-x-python-bytecode.png   gnome-mime-text-css.png\
gnome-mime-application.png                           gnome-mime-application-x-python.png            gnome-mime-text-html.png\
gnome-mime-application-postscript.png                gnome-mime-application-x-qw.png                gnome-mime-text.png\
gnome-mime-application-qif.png                       gnome-mime-application-x-rar.png               gnome-mime-text-sgml.png\
gnome-mime-application-rhythmbox-effect.png          gnome-mime-application-x-reject.png            gnome-mime-text-x-authors.png\
gnome-mime-application-rhythmbox-playlist.png        gnome-mime-application-x-rpm.png               gnome-mime-text-x-chdr.png\
gnome-mime-application-rtf.png                       gnome-mime-application-x-sharedlib.png         gnome-mime-text-x-c-header.png\
gnome-mime-application-smil.png                      gnome-mime-application-x-share-library-la.png  gnome-mime-text-x-copying.png\
gnome-mime-application-vnd.ms-excel.png              gnome-mime-application-x-shellscript.png       gnome-mime-text-x-c.png\
gnome-mime-application-vnd.ms-powerpoint.png         gnome-mime-application-x-shockwave-flash.png   gnome-mime-text-x-c++.png\
gnome-mime-application-vnd.rn-realmedia.png          gnome-mime-application-x-smil.png              gnome-mime-text-x-credits.png\
gnome-mime-application-vnd.stardivision.calc.png     gnome-mime-application-x-tar.png               gnome-mime-text-x-csharp.png\
gnome-mime-application-vnd.stardivision.chart.png    gnome-mime-application-x-tex.png               gnome-mime-text-x-csh.png\
gnome-mime-application-vnd.stardivision.impress.png  gnome-mime-application-x-trash.png             gnome-mime-text-x-c++src.png\
gnome-mime-application-vnd.stardivision.writer.png   gnome-mime-application-zip.png                 gnome-mime-text-x-csrc.png\
gnome-mime-application-vnd.sun.xml.calc.png          gnome-mime-audio-ac3.png                       gnome-mime-text-x-gettext-translation.png\
gnome-mime-application-vnd.sun.xml.chart.png         gnome-mime-audio-basic.png                     gnome-mime-text-x-haskell.png\
gnome-mime-application-vnd.sun.xml.draw.png          gnome-mime-audio-midi.png                      gnome-mime-text-x-install.png\
gnome-mime-application-vnd.sun.xml.impress.png       gnome-mime-audio.png                           gnome-mime-text-x-java.png\
gnome-mime-application-vnd.sun.xml.writer.png        gnome-mime-audio-x-aiff.png                    gnome-mime-text-x-literate-haskell.png\
gnome-mime-application-x-abiword.png                 gnome-mime-audio-x-it.png                      gnome-mime-text-x-log.png\
gnome-mime-application-x-archive.png                 gnome-mime-audio-x-midi.png                    gnome-mime-text-x-lyx.png\
gnome-mime-application-x-arj.png                     gnome-mime-audio-x-mod.png                     gnome-mime-text-x-makefile.png\
gnome-mime-application-x-blender.png                 gnome-mime-audio-x-mp3.png                     gnome-mime-text-xml.png\
gnome-mime-application-x-bzip-compressed-tar.png     gnome-mime-audio-x-mpegurl.png                 gnome-mime-text-x-patch.png\
gnome-mime-application-x-bzip.png                    gnome-mime-audio-x-pn-realaudio.png            gnome-mime-text-x-readme.png\
gnome-mime-application-x-cd-image.png                gnome-mime-audio-x-s3m.png                     gnome-mime-text-x-scheme.png\
gnome-mime-application-x-compressed-tar.png          gnome-mime-audio-x-stm.png                     gnome-mime-text-x-sh.png\
gnome-mime-application-x-compress.png                gnome-mime-audio-x-ulaw.png                    gnome-mime-text-x-tex.png\
gnome-mime-application-x-cpio-compressed.png         gnome-mime-audio-x-voc.png                     gnome-mime-text-x-troff-man.png\
gnome-mime-application-x-cpio.png                    gnome-mime-audio-x-wav.png                     gnome-mime-text-x-vcalendar.png\
gnome-mime-application-x-deb.png                     gnome-mime-audio-x-xi.png                      gnome-mime-text-x-vcard.png\
gnome-mime-application-x-desktop.png                 gnome-mime-audio-x-xm.png                      gnome-mime-text-x-xslt.png\
gnome-mime-application-x-dia-diagram.png             gnome-mime-image-bmp.png                       gnome-mime-text-x-zsh.png\
gnome-mime-application-x-dvi.png                     gnome-mime-image-gif.png                       gnome-mime-video-mpeg.png\
gnome-mime-application-x-executable.png              gnome-mime-image-ief.png                       gnome-mime-video.png\
gnome-mime-application-x-font-asm.png                gnome-mime-image-jpeg.png                      gnome-mime-video-quicktime.png\
gnome-mime-application-x-font-bdf.png                gnome-mime-image.png                           gnome-mime-video-x-ms-asf.png\
gnome-mime-application-x-font-linux-psf.png          gnome-mime-image-png.png                       gnome-mime-video-x-msvideo.png\
gnome-mime-application-x-font-pcf.png                gnome-mime-image-svg.png                       gnome-mime-video-x-ms-wmv.png\
gnome-mime-application-x-font-ttf.png                gnome-mime-image-tiff.png                      gnome-mime-x-directory-nfs-server.png\
gnome-mime-application-x-gettext-translation.png     gnome-mime-image-x-3ds.png                     gnome-mime-x-directory-smb-server.png\
gnome-mime-application-x-glade.png                   gnome-mime-image-x-applix-graphic.png          gnome-mime-x-directory-smb-share.png\
gnome-mime-application-x-gnucash.png                 gnome-mime-image-x-cmu-raster.png              gnome-mime-x-directory-smb-workgroup.png\
gnome-mime-application-x-gnumeric.png                gnome-mime-image-x-portable-anymap.png         gnome-mime-x-font-afm.png\
gnome-mime-application-x-gtktalog.png                gnome-mime-image-x-portable-bitmap.png         gnome-package.png\
gnome-mime-application-x-gzip.png                    gnome-mime-image-x-portable-greymap.png        stock_run.png\
gnome-mime-application-x-kde-app-info.png            gnome-mime-image-x-portable-pixmap.png         x-gdesklets-display.png\
gnome-mime-application-x-killustrator.png            gnome-mime-image-x-psd.png

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(icondir)
	( cd $(DESTDIR)$(icondir) ; \
	  icons="$(icon_DATA)" ; \
	  for file in $$icons; do \
	    if echo $$file | grep '^gnome-mime-[^-]*-' > /dev/null; then \
	      rm -f `echo $$file | sed -e 's/^gnome-mime-\([^-]*\)-/mime-\1:/'` ; \
	      ln -sf $$file `echo $$file | sed -e 's/^gnome-mime-\([^-]*\)-/mime-\1:/'` ; \
	    elif echo $$file | grep '^gnome-mime-' > /dev/null; then \
	      rm -f `echo $$file | sed -e 's/^gnome-//'` ; \
	      ln -sf $$file `echo $$file | sed -e 's/^gnome-//'` ; \
	    fi \
	  done \
	)

EXTRA_DIST =  $(icon_DATA)

