
icondir = $(datadir)/icons/Rodent-2/48x48/mimetypes

# Icon-naming-spec compliant #
# ########################## #
generic_mimetype_icons = \
application-x-executable.png \
audio-x-generic.png \
image-x-generic.png \
package-x-generic.png \
text-x-generic.png \
text-x-script.png \
video-x-generic.png \
x-office-document.png \
x-office-presentation.png \
x-office-spreadsheet.png

additional_mimetype_icons = 

icon_DATA = \
	$(generic_mimetype_icons) \
	$(additional_mimetype_icons)

EXTRA_DIST =  $(icon_DATA)

