
icondir = $(datadir)/icons/Rodent/48x48/misc

icon_DATA = \
arrow.png         f-memory.png         notes.png          ui.png\
backdrop.png      fs-win.png           panel.png          usb_key.png\
calc.png          gnome-starthere.png  root_terminal.png  webcam.png\
calendar.png      iconbox.png          run.png            wksp.png\
chooser_icon.png  keyboard.png         settings.png       wm.png\
debian.png        menueditor.png       sm.png             xfce4-appfinder.png\
display.png       money.png            sound.png\
file-manager.png  mouse.png            tabwin.png\
firewall.png      news.png             taskbar.png

EXTRA_DIST =  $(icon_DATA)

