
icondir = $(datadir)/icons/Rodent/48x48/misc

icon_DATA = \
arrow.png         firewall.png    news.png           tabwin.png\
backdrop.png      f-memory.png    notes.png          taskbar.png\
calc.png          fs-win.png      panel.png          ui.png\
calendar.png      iconbox.png     root_terminal.png  usb_key.png\
chooser_icon.png  keyboard.png    run.png            webcam.png\
debian.png        menueditor.png  settings.png       wksp.png\
display.png       money.png       sm.png             wm.png\
file-manager.png  mouse.png       sound.png          xfce4-appfinder.png

EXTRA_DIST =  $(icon_DATA)

