
icondir = $(datadir)/icons/Rodent/48x48/misc

icon_DATA = \
calc.png      news.png           sound.png        webcam.png \
debian.png    notes.png          tabwin.png       wksp.png \
firewall.png  root_terminal.png  taskbar.png      wm.png \
f-memory.png  run.png            taskmanager.png  xfce4-appfinder.png \
fs-win.png    settings.png       ui.png 	  menueditor.png \
money.png     sm.png             arrow.png	usb_key.png 

EXTRA_DIST =  $(icon_DATA)

