
icondir = $(datadir)/icons/Rodent/48x48/stock

icon_DATA = \
b-book-closed.png         go-up.png               stock_edit.png                    stock_properties.png\
b-book-open.png           stock_epiphany-bookmark-page.png  stock_quit.png\
b-find.png                stock_execute.png                 stock_redo.png\
b-frequent.png            stock_export.png                  stock_refresh.png\
b-fstab.png               p-edit.png                       stock_find-and-replace.png        stock_remove.png\
b-network.png                p-file1.png                      stock_find.png                    stock_reset.png\
b-recent.png                         p-file2.png                      stock_floppy.png                  stock_revert-to-saved.png\
b-trash.png               media-backward.png  p-games.png                      stock_fullscreen.png              stock_run.png\
b-xffm_icon.png                media-eject.png     p-multimedia.png                 stock_go-back.png                 stock_save-as.png\
c-gid.png                 media-forward.png   p-network.png                    stock_go-down.png                 stock_save.png\
c-mode.png                media-next.png      p-newmail.png                    stock_go-forward.png              stock_screenshot.png\
c-name.png                media-pause.png     p-nomail.png                     stock_goto-bottom.png             stock_search.png\
comp1.png                 media-play.png      p-oldmail.png                    stock_goto-first.png              stock_select-color.png\
c-size.png                media-prev.png      p-paint.png                      stock_goto-last.png               stock_select-font.png\
c-time32.png              media-record.png    p-print.png                      stock_goto-top.png                stock_sort-ascending.png\
c-time.png                media-stop.png      p-schedule.png                   stock_go-up.png                   stock_sort-descending.png\
c-uid.png                 p-sound.png                      stock_harddisk.png                stock_spell-check.png\
d-application.png         p-terminal.png                   stock_help.png                    stock_stop.png\
d-audio.png               p-unknown.png                    stock_history.png                 stock_strikethrough.png\
d-bomb.png                rox-show-details.png             stock_home.png                    stock_undelete.png\
d-exec.png                rox-show-hidden.png              stock_import.png                  stock_underline.png\
d-help.png                stock_about.png                  stock_indent.png                  stock_undo.png\
diff.png                  stock_accessories.png            stock_index.png                   stock_unindent.png\
d-image.png               stock_add.png                    stock_insert-image.png            stock_unknown.png\
dir-closed.png            stock_amusements.png             stock_insert-object.png           stock_volume.png\
dir-open.png              stock_apply.png                  stock_insert-table.png            stock_yes.png\
d-message.png             stock_attach.png                 stock_internet.png                stock_zoom-100.png\
d-model.png               stock_balance.png                stock_italic.png                  stock_zoom-fit.png\
d-multipart.png           stock_bold.png                   stock_jump-to.png                 stock_zoom-in.png\
d-no-access.png           stock_book-open.png              stock_justify-center.png          stock_zoom-out.png\
downarrow.png             stock_book.png                   stock_justify-fill.png            t-exec.png\
d-symlink-broken.png      stock_cancel.png                 stock_justify-left.png            t-find.png\
d-symlink.png             stock_cdrom.png                  stock_justify-right.png           t-new-directory.png\
d-text.png                 stock_clear.png                  stock_line-in.png                 t-new-file.png\
d-txt.png                 stock_close.png                  stock_logout.png                  t-quit.png\
d-video.png               stock_color-picker.png           stock_mailto.png                  t-reload.png\
d-waste_basket_empty.png  stock_connect.png                stock_mic.png                     t-terminal.png\
d-waste_basket_full.png   stock_convert.png                stock_missing-image.png           t-xfce-setting-show.png\
d-xfce.png                stock_copy.png                   stock_multimedia.png              t-xfdiff.png\
f-cdrom.png               stock_cut.png                    stock_network.png                 t-zoom-in.png\
f-disk.png                stock_delete.png                 stock_new.png                     t-zoom-out.png\
f-dvd.png                 stock_dialog-authentication.png  stock_new-tab.png                 t-zoom-view.png\
f-floppy.png              stock_dialog-error.png           stock_no.png                      volume-max.png\
f-netdisk.png             stock_dialog-info.png            stock_ok.png                      volume-medium.png\
go-back.png               stock_dialog-question.png        stock_open.png                    volume-min.png\
go-down.png               stock_dialog-warning.png         stock_paste.png                   volume-mute.png\
go-forward.png            stock_disconnect.png             stock.png                         volume-zero.png\
go-home.png               stock_dnd-multiple.png           stock_preferences.png             xfdiff.png\
go-jump.png               stock_dnd.png                    stock_print.png                   xffm_icon.png\
go-start.png              stock_download.png               stock_print-preview.png\
comp1.xpm    p-edit.xpm   p-file2.xpm  p-multimedia.xpm  p-newmail.xpm  p-oldmail.xpm  p-print.xpm     p-sound.xpm     p-unknown.xpm\
new_win.xpm  p-file1.xpm  p-games.xpm  p-network.xpm     p-nomail.xpm   p-paint.xpm    p-schedule.xpm  p-terminal.xpm

EXTRA_DIST =  $(icon_DATA)

