
icondir = $(datadir)/icons/Rodent/48x48/stock

icon_DATA = \
 stock_indent.png \
 stock_index.png\
 stock_insert-image.png\
 stock_insert-object.png\
media-backward.png                stock_insert-table.png\
media-eject.png                   stock_internet.png\
media-forward.png                 stock_italic.png\
media-next.png                    stock_jump-to.png\
media-pause.png                   stock_justify-center.png\
media-play.png                    stock_justify-fill.png\
media-prev.png                    stock_justify-left.png\
media-record.png                  stock_justify-right.png\
media-stop.png                    stock_line-in.png\
rox-show-details.png              stock_logout.png\
rox-show-hidden.png               stock_mailto.png\
stock_about.png                   stock_mic.png\
stock_accessories.png             stock_missing-image.png\
stock_add.png                     stock_multimedia.png\
stock_amusements.png              stock_network.png\
stock_apply.png                   stock_new.png\
stock_attach.png                  stock_new-tab.png\
stock_balance.png                 stock_no.png\
stock_bold.png                    stock_ok.png\
stock_book-open.png               stock_open.png\
stock_book.png                    stock_paste.png\
stock_cancel.png                  stock.png\
stock_cdrom.png                   stock_preferences.png\
stock_clear.png                   stock_print.png\
stock_close.png                   stock_print-preview.png\
stock_color-picker.png            stock_properties.png\
stock_connect.png                 stock_quit.png\
stock_convert.png                 stock_redo.png\
stock_copy.png                    stock_refresh.png\
stock_cut.png                     stock_remove.png\
stock_delete.png                  stock_reset.png\
stock_dialog-authentication.png   stock_revert-to-saved.png\
stock_dialog-error.png            stock_run.png\
stock_dialog-info.png             stock_save-as.png\
stock_dialog-question.png         stock_save.png\
stock_dialog-warning.png          stock_screenshot.png\
stock_disconnect.png              stock_search.png\
stock_dnd-multiple.png            stock_select-color.png\
stock_dnd.png                     stock_select-font.png\
stock_download.png                stock_sort-ascending.png\
stock_edit.png                    stock_sort-descending.png\
stock_epiphany-bookmark-page.png  stock_spell-check.png\
stock_execute.png                 stock_stop.png\
stock_export.png                  stock_strikethrough.png\
stock_find-and-replace.png        stock_undelete.png\
stock_find.png                    stock_underline.png\
stock_floppy.png                  stock_undo.png\
stock_fullscreen.png              stock_unindent.png\
stock_go-back.png                 stock_unknown.png\
stock_go-down.png                 stock_volume.png\
stock_go-forward.png              stock_yes.png\
stock_goto-bottom.png             stock_zoom-100.png\
stock_goto-first.png              stock_zoom-fit.png\
stock_goto-last.png               stock_zoom-in.png\
stock_goto-top.png                stock_zoom-out.png\
stock_go-up.png                   volume-max.png\
stock_harddisk.png                volume-medium.png\
stock_help.png                    volume-min.png\
stock_history.png                 volume-mute.png\
stock_home.png                    volume-zero.png\
stock_import.png
 
EXTRA_DIST =  $(icon_DATA)

